Fix ResourceManagerImplIT